fix 1px shift on play button active item

--- a/src/components/Carousel/components/Controller/components/Item/Item.module.scss
+++ b/src/components/Carousel/components/Controller/components/Item/Item.module.scss
@@ -138,6 +138,8 @@ $scale-mid-to-min-width: calc(1 - difference($mid-item-width, $min-item-width));
   justify-content: center;
   svg {
     stroke: var(--color-neutral-100);
+    width: 24px;
+    height: 24px;
   }
 }
 
